--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Puppy Finance is a next-generation decentralized NFT yield farming ecosystem powered by Binance Smart Chain." />
+    <meta name="description" content="Puppyworld Finance is a next-generation decentralized NFT yield farming ecosystem powered by Binance Smart Chain." />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Puppy Finance - Dedicated to puppy lovers</title>
+    <title>PuppyWorld Finance - Dedicated to puppy lovers</title>
 </head>
 
 <body>
